--- a/DFEitechLibrary/DFEitechLibrary.csproj
+++ b/DFEitechLibrary/DFEitechLibrary.csproj
@@ -188,7 +188,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="LogButler.cs" />
+    <Compile Include="LogLink.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Book.cs" />
     <Compile Include="Models\BookType.cs" />
