--- a/DFEitechLibrary/DFEitechLibrary.csproj
+++ b/DFEitechLibrary/DFEitechLibrary.csproj
@@ -202,6 +202,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\dwStyles.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -265,6 +266,10 @@
     <Content Include="Views\Type\_TypeForm.cshtml" />
     <Content Include="Views\Type\_SearchTypes.cshtml" />
     <Content Include="Views\Type\RefinedTypes.cshtml" />
+    <Content Include="Views\Book\_BookForm.cshtml" />
+    <Content Include="Views\Book\_SearchBooks.cshtml" />
+    <Content Include="Views\Loan\_LoanForm.cshtml" />
+    <Content Include="Views\Loan\_SearchLoans.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
